--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sportun
+spring.datasource.url=jdbc:mysql://k2l77j2s75xewkzy:i2pqnz5sayzfenym@olxl65dqfuqr6s4y.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/zofcp6brr7fsm24x
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=
