--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://k2l77j2s75xewkzy:i2pqnz5sayzfenym@olxl65dqfuqr6s4y.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/zofcp6brr7fsm24x
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=	k2l77j2s75xewkzy
+spring.datasource.password=	i2pqnz5sayzfenym
 server.port=8081
 
 spring.servlet.multipart.enabled=true
